--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="index.html"><h3>PMGT</h3></a>
+            <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
         </div>
         <nav>
             <ul>
