--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="index.html"><h3>PMGT</h3></a>
+            <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
         </div>
         <nav>
             <ul>
@@ -53,14 +53,9 @@
                 <img src="Imagenes/Campo/campo3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Casa en el Pueblo</p><br>
+                    <p>Obra: Casa en el Pueblo</p>
                     <p>Año: 2021</p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: Proyecto</p><br>
-                    <p>Area: 150m2</p>
-                </div>
+                    <p>Tipo: Proyecto</p>
             </div>
         </div>
         <div class="proyecto N2" id="casero">
@@ -70,14 +65,9 @@
                 <img src="Imagenes/Casero/casero3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Caseros</p><br>
+                    <p>Obra: Caseros</p>
                     <p>Año: 2020</p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: Remodelación</p><br>
-                    <p>Area: 100m2</p>
-                </div>
+                    <p>Tipo: Remodelación</p>
             </div>
         </div>
         <div class="proyecto N3" id="sanAgustin">
@@ -87,14 +77,9 @@
                 <img src="Imagenes/SanAgustin/sanAgustin3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Casa San Agustin</p><br>
+                    <p>Obra: Casa San Agustin</p>
                     <p>Año: 2019</p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: Obra nueva</p><br>
-                    <p>Area: 220m2</p>
-                </div>
+                    <p>Tipo: Obra nueva</p>
             </div>
         </div>
         <div class="proyecto N4" id="heyJules">
@@ -103,15 +88,10 @@
                 <img src="Imagenes/HeyJules/heyJules2.jpg">
                 <img src="Imagenes/HeyJules/heyJules3.jpg">
             </div>
-            <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Hey Jules</p><br>
-                    <p>Año: 2019</p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: Remodelación</p><br>
-                    <p>Area: 220m2</p>
-                </div>
+            <div class="imageDescription">          
+                    <p>Obra: Hey Jules</p>
+                    <p>Año: 2019</p>       
+                    <p>Tipo: Showroom</p>         
             </div>
         </div>
         <div class="proyecto N5" id="dorrego">
@@ -121,14 +101,9 @@
                 <img src="Imagenes/Dorrego/dorrego3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Dorrego</p><br>
+                    <p>Obra: Dorrego 303</p>
                     <p>Año: 2018</p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: Remodelación</p><br>
-                    <p>Area: 50m2</p>
-                </div>
+                    <p>Tipo: Remodelación</p>
             </div>
         </div>
         <div class="proyecto N6" id="jeanJaures">
@@ -138,14 +113,9 @@
                 <img src="Imagenes/JeanJaures/jeanJaures3.png">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Jean Jaures</p><br>
-                    <p>Año: </p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: </p><br>
-                    <p>Area: </p>
-                </div>
+                    <p>Obra: Jean Jaures</p>
+                    <p>Año: 2020</p>
+                    <p>Tipo: Remodelación</p>
             </div>
         </div>
         <div class="proyecto N7" id="curuchet">
@@ -155,14 +125,9 @@
                 <img src="Imagenes/Curuchet/curuchet3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Curuchet</p><br>
+                    <p>Obra: Curuchet</p>
                     <p>Año: </p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: </p><br>
-                    <p>Area: </p>
-                </div>
+                    <p>Tipo: </p>
             </div>
         </div>
         <div class="proyecto N8" id="castaños">
@@ -172,14 +137,9 @@
                 <img src="Imagenes/Castaños/castaños3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Castaños</p><br>
+                    <p>Obra: Castaños</p>
                     <p>Año: </p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: </p><br>
-                    <p>Area: </p>
-                </div>
+                    <p>Tipo: </p>
             </div>
         </div>
         <div class="proyecto N9" id="madero">
@@ -189,14 +149,9 @@
                 <img src="Imagenes/Madero/madero3.jpg">
             </div>
             <div class="imageDescription">
-                <div class="descA">
-                    <p>Obra: Madero</p><br>
-                    <p>Año: </p>
-                </div>
-                <div class="descB">
-                    <p>Tipo: </p><br>
-                    <p>Area: </p>
-                </div>
+                    <p>Obra: Juana Manso</p>
+                    <p>Año: 2020</p>
+                    <p>Tipo: Remodelación</p>
             </div>
         </div>
     </main>
