--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
     <title>Estudio Permingeat</title>
 </head>
 <body>
+    <div id="splash"></div>
     <header id="menu">
         <div class="conteinerLogo">    
             <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
@@ -126,8 +127,8 @@
             </div>
             <div class="imageDescription">
                     <p>Obra: Curuchet</p>
-                    <p>Año: </p>
-                    <p>Tipo: </p>
+                    <p>Año: 2021</p>
+                    <p>Tipo: Remodelación</p>
             </div>
         </div>
         <div class="proyecto N8" id="castaños">
@@ -138,8 +139,8 @@
             </div>
             <div class="imageDescription">
                     <p>Obra: Castaños</p>
-                    <p>Año: </p>
-                    <p>Tipo: </p>
+                    <p>Año: 2018</p>
+                    <p>Tipo: Obra construida</p>
             </div>
         </div>
         <div class="proyecto N9" id="madero">
