--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <title>Estudio Permingeat</title>
 </head>
 <body>
+    <div id="splash"></div>
     <header id="menu">
         <div class="conteinerLogo">    
             <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
@@ -50,10 +51,10 @@
             <img src="Imagenes/arquitecta-min.jpg">
         </div>
         <div class="secB">
-            <p>&nbsp;&nbsp;PMGT es un estudio de Arquitectura fundado en 2018 y dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)<br><br>
-            &nbsp;&nbsp;Nuestro trabajo esta basado en las condiciones especificas y unicas que tiene cada proyecto, el contexto y las aspiraciones del cliente.<br><br> 
-            &nbsp;&nbsp;Cada proyecto es una busqueda de espacios calidos, una atmosfera tranquila donde disfrutar de la nobleza de los materiales y la belleza del silencio. Donde la luz es protagonista y las personas encuentran su refugio.<br><br>  
-            &nbsp;&nbsp;Perseguimos una arquitectura atemporal y simple con la mayor optimizacion de los recursos.</p>
+            <p>&nbsp;&nbsp;PMGT es un estudio de Arquitectura fundado en 2018, dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)<br><br>
+            &nbsp;&nbsp;Nuestro trabajo esta basado en las condiciones específicas y únicas que tiene cada proyecto, el contexto y las aspiraciones del cliente.<br><br> 
+            &nbsp;&nbsp;Cada proyecto, es una búsqueda de espacios cálidos, una atmosfera tranquila donde disfrutar de la nobleza de los materiales y la belleza del silencio. Donde la luz, es protagonista y las personas encuentran su refugio.<br><br>  
+            &nbsp;&nbsp;Perseguimos una arquitectura atemporal y simple, con la mayor optimización de los recursos.</p>
         </div>
     </main>
     <footer>
