--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <title>Estudio Permingeat</title>
 </head>
 <body>
+    <div id="splash"></div>
     <header id="menu">
         <div class="conteinerLogo">    
             <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
