--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a href="projects.html#heyJules"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html"><img src="Imagenes/Dorrego/dorrego2.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#dorrego"><img src="Imagenes/Dorrego/dorrego2.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <a href="projects.html#curuchet"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="imagen interior"></a>
@@ -74,7 +74,7 @@
                     <a href="projects.html#casero"><img src="Imagenes/Casero/casero3.jpg" alt="imagen interior"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#castaño"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#castaños"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
                 </div>
             </div>  
         </section>
