--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@
             <img src="Imagenes/arquitecta-min.jpg">
         </div>
         <div class="secB">
-            <p>&nbsp;&nbsp;PMGT es un estudio de Arquitectura fundado en 2018, dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)<br><br>
-            &nbsp;&nbsp;Nuestro trabajo esta basado en las condiciones específicas y únicas que tiene cada proyecto, el contexto y las aspiraciones del cliente.<br><br> 
-            &nbsp;&nbsp;Cada proyecto, es una búsqueda de espacios cálidos, una atmosfera tranquila donde disfrutar de la nobleza de los materiales y la belleza del silencio. Donde la luz, es protagonista y las personas encuentran su refugio.<br><br>  
-            &nbsp;&nbsp;Perseguimos una arquitectura atemporal y simple, con la mayor optimización de los recursos.</p>
+            <p>PMGT es un estudio de Arquitectura fundado en 2018, dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)<br><br>
+            Nuestro trabajo esta basado en las condiciones específicas y únicas que tiene cada proyecto, el contexto y las aspiraciones del cliente.<br><br> 
+            Cada proyecto, es una búsqueda de espacios cálidos, una atmósfera tranquila donde disfrutar de la nobleza de los materiales y la belleza del silencio. Donde la luz es protagonista y las personas encuentran su refugio.<br><br>  
+            Perseguimos una arquitectura atemporal y simple, con la mayor optimización de los recursos.</p>
         </div>
     </main>
     <footer>
