--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
+            <a href="index.html"><h3>MELISA PERMINGEAT<p> & Asociados.</p></h3></a>
         </div>
         <nav>
             <ul>
@@ -50,31 +50,31 @@
         <section id="galeria">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#campo"><img src="Imagenes/Campo/campo1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#campo"><img src="Imagenes/Campo/campo1.jpg" alt="frente de obra"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#madero"><img src="Imagenes/Madero/madero1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#madero"><img src="Imagenes/Madero/madero1.jpg" alt="detalle cocina"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#sanAgustin"><img src="Imagenes/SanAgustin/sanAgustin3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#sanAgustin"><img src="Imagenes/SanAgustin/sanAgustin3.jpg" alt="detalle bañera"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#heyJules"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#heyJules"><img src="Imagenes/HeyJules/heyJules3.jpg" alt="recepcion showroom"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#dorrego"><img src="Imagenes/Dorrego/dorrego2.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#dorrego"><img src="Imagenes/Dorrego/dorrego2.jpg" alt="cocina"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#curuchet"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#curuchet"><img src="Imagenes/Curuchet/curuchet1.jpg" alt="fachada casa"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#jeanJaures"><img src="Imagenes/JeanJaures/jeanJaures1.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#jeanJaures"><img src="Imagenes/JeanJaures/jeanJaures1.jpg" alt="detalle cocina"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#casero"><img src="Imagenes/Casero/casero3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#casero"><img src="Imagenes/Casero/casero3.jpg" alt="detalle cocina"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#castaños"><img src="Imagenes/Castaños/castaños3.jpg" alt="imagen interior"></a>
+                    <a href="projects.html#castaños"><img src="Imagenes/Castaños/castaños3.jpg" alt="detalle cocina"></a>
                 </div>
             </div>  
         </section>
