--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
+            <a href="index.html"><h3>MELISA PERMINGEAT<p> & Asociados.</p></h3></a>
         </div>
         <nav>
             <ul>
@@ -47,7 +47,7 @@
     </header>
     <main class="mainAbout">
         <div class="secA">
-            <img src="Imagenes/arquitecta-min.jpg">
+            <img src="Imagenes/arquitecta-min.jpg" alt="imagen arquitecta">
         </div>
         <div class="secB">
             <p>PMGT es un estudio de Arquitectura fundado en 2018, dirigido por la arquitecta Melisa Permingeat (General Arenales, 1990)<br><br>
