--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 <body>
     <header id="menu">
         <div class="conteinerLogo">    
-            <a href="index.html"><h3>Melisa Permingeat<p> & Asociados.</p></h3></a>
+            <a href="index.html"><h3>MELISA PERMINGEAT<p> & Asociados.</p></h3></a>
         </div>
         <nav>
             <ul>
