--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a href="projects.html#casero"><img src="Imagenes/Casero/casero3.jpg" alt="detalle cocina"></a>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <a href="projects.html#castaños"><img src="Imagenes/Castaños/castaños3.jpg" alt="detalle cocina"></a>
+                    <a href="projects.html#castanos"><img src="Imagenes/Castanos/castanos3.jpg" alt="detalle cocina"></a>
                 </div>
             </div>  
         </section>
