--- a/projects.html
+++ b/projects.html
@@ -130,14 +130,14 @@
                     <p>Tipo: Remodelación</p>
             </div>
         </div>
-        <div class="proyecto N8" id="castaños">
+        <div class="proyecto N8" id="castanos">
             <div class="imageSector">
-                <img src="Imagenes/Castaños/castaños1.jpg">
-                <img src="Imagenes/Castaños/castaños2.jpg">
-                <img src="Imagenes/Castaños/castaños3.jpg">
+                <img src="Imagenes/Castanos/castanos1.jpg">
+                <img src="Imagenes/Castanos/castanos2.jpg">
+                <img src="Imagenes/Castanos/castanos3.jpg">
             </div>
             <div class="imageDescription">
-                    <p>Obra: Castaños</p>
+                    <p>Obra: Castanos</p>
                     <p>Año: 2018</p>
                     <p>Tipo: Obra construida</p>
             </div>
